[package]
name = "warp-prometheus"
version = "0.2.0"
authors = ["Calvin Brown <cab025@protonmail.com>"]
description = "An afterthought of prometheus metrics for Warp"
repository = "https://github.com/calvinbrown085/warp-prometheus"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/calvinbrown085/warp-prometheus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.0"
prometheus =  "0.11.0"
warp = "0.3.0"
