[package]
name = "warp-prometheus"
version = "0.5.0"
authors = ["Calvin Brown <cab025@protonmail.com>"]
description = "An afterthought of prometheus metrics for Warp"
repository = "https://github.com/calvinbrown085/warp-prometheus"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
prometheus =  "0.13.0"
warp = "0.3.0"
